--- a/main.html
+++ b/main.html
@@ -8,6 +8,47 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for="name">Name</label>
+		<input type="text" id="name" required>
+		<br>
+		
+		<label for="email">Email</label>
+		<input type="email" id="email" required>
+		<br>
+		
+		<label for="gender_m">Male</label>
+		<input type="radio" required name="gender">
+		<br>
+		
+		<label for="gender_f">Female</label>
+		<input type="radio" required name="gender">
+		<br>
+		
+		<label for="car_brands">Car Brands</label>
+		<select id="cars">
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+		<br>
+		
+		<label for="carage">Car Age</label>
+		<input type="number" id="carage" required>
+		<br>
+		
+		<label for="dop">Date</label>
+		<input type="date" id="dop" required>
+		<br>
+		
+		<label for="password">Password</label>
+		<input type="password" id="password" required>
+		<br>
+		
+		<label for="submit"></label>
+		<button type="submit">Submit</button>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
