--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form>
+	<form method="post">
 		<label for="name">Name</label>
 		<input type="text" id="name" required>
 		<br>
@@ -25,7 +25,7 @@
 		<input type="radio" required name="gender">
 		<br>
 		
-		<label for="car_brands">Car Brands</label>
+		<label for="cars">Car Brands</label>
 		<select id="cars">
 			<option>BMW</option>
 			<option>Audi</option>
